generate new ui client
